# xpress-scan

./: .env.production.example  .gitignore  APPOINTMENT_FEATURES_SUMMARY.md  APPOINTMENT_WORKFLOW_FEATURES.md  CONFIGURATION_COMPLETE.md  CONFLICT_DETECTION_GUIDE.md  CONFLICT_DETECTION_SUMMARY.md  DASHBOARD_ENHANCEMENT_SUMMARY.md  DENTAL_DASHBOARD_CUSTOMIZATION.md  DEPLOYMENT.md  ENHANCED_DASHBOARD_FEATURES.md  ENV_FILES_CREATED.md  ENV_SETUP_GUIDE.md  FDI_NUMBERING_GUIDE.md  FLATICON_INTEGRATION.md  FUTURE_FEATURES.md  MIGRATION_TO_FIREBASE_AND_RENDER.md  MOBILE_APP_PLAN.md  MOBILE_APP_README.md  MODAL_CONVERSION_CHECKLIST.md  MODAL_CONVERSION_SUMMARY.md  MOLARPLUS_MESSAGE_TEMPLATES.md  PATIENT_FILES_INTEGRATION.md  PATIENT_REGISTRATION_FIX.md  PROFILE_TAB_FEATURE.md  RAZORPAY_SUBSCRIPTION_SETUP.md  README.md  SCHEDULE_MESSAGE_EXPLANATION.md  SETUP_SUMMARY.md  STYLE_GUIDE.md  TESTING_DENTAL_CHART_SAVE.md  TODAYS_VIEW_FEATURE.md  TREATMENT_PLAN_IMPROVEMENTS.md  WHATSAPP_SETUP.md  deploy-aws.sh  deploy.sh  docker-compose.aws.yml  docker-compose.prod.yml  docker-compose.yml  fix_infrastructure.exp  (+17 more)
backend/: .dockerignore  .env  .env.example  .env.gmail_template  Dockerfile  ZOHO_SETUP.md  add_invoice_template_col.py  analyze_template.py  auth.py  backend.spec  build.sh  check_db_triggers.py  check_drive_usage.py  check_user_clinic.py  database.py  main.py  (+46 more)
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: commands.rs  config.rs  main.rs  oauth.rs  server.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: generate.py  icon.icns
desktop/src-tauri/msix/: AppxManifest.xml  build-msix.ps1
desktop/src-tauri/src/: lib.rs  main.rs
(+1128 files in other folders)
