[package]
name = "bdent"
version = "1.0.0"
description = "BDent - Dental Practice Management Software by Better Clinic"
authors = ["Better Clinic"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
local-ip-address = "0.6"
open = "5"
axum = { version = "0.7", features = ["http2"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }
urlencoding = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
